--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Nike React App
+name: Deploy Website
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-      - name: Deploy to GitHub Pages
+      - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.MY_TOKEN }}
